export default class Players {

  players;

  constructor() {
    this.players = [];
  }

  setPlayers() {}

  getPlayers() {
    return this.players;
  }

}