@startuml "Classes Diagram"

class Connect4 {
  - game
  - GameView

  init()
  play()
}
class Game {
  - turn
  + board
  + players
  + NUMBER_PLAYERS
  + COLORS

  isOver()
  getTurn()
  changeTurn()
}
class GameView {
  + MESSAGES
  + boardView
  + playersView

  playAgain()
  isValidAnswer()
}
class Board {
  - board
  + DELIMITER
  + EMPTY
  + NUMBER_ROWS
  + line

  reset()
  chooseColumn()
  isValidColumn()
  isFull()
  isFullColumn()
  putToken()
  getRow()
}
class BoardView {
  show()
}
class Line {
  - DIRECTIONS

  getLine()
  shift()
  isConnect4()
}
class Players {
  getPlayer()
}
class PlayersView {
  choosePlayers()
  isValidPlayerType()
}
class HumanPlayer {
  chooseColumn()
  isValidColumn()
}
class MachinePlayer {
  chooseColumn()
  randomColumn()
}
class Messages {

}

Connect4 *--> Game
Connect4 ..> GameView
Game --> Players
Game *--> Board
GameView ..> BoardView
GameView --> PlayersView
Messages <. GameView
Board ..> Line
Players *--> HumanPlayer
Players *--> MachinePlayer

@enduml